# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
+        "description": "This is a sample REST API server.",
+        "title": "User Subscription REST API Server",
         "contact": {},
         "version": "1.0"
     },
@@ -11,21 +11,18 @@
     "paths": {
         "/subscriptions": {
             "get": {
-                "description": "Возвращает список подписок пользователя по его UUID",
+                "description": "Returns a list of a user's subscriptions by their UUID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Получение списка подписок пользователя",
+                "summary": "Get list of user subscriptions",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "UUID пользователя",
+                        "description": "User UUID",
                         "name": "user_id",
                         "in": "query",
                         "required": true
@@ -42,19 +39,19 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректный UUID или отсутствует параметр",
+                        "description": "Invalid UUID or missing parameter",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Пользователь не найден",
+                        "description": "User not found",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка получения списка подписок",
+                        "description": "Server error",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
@@ -62,20 +59,17 @@
                 }
             },
             "post": {
-                "description": "Adding user subsctiption to db.",
+                "description": "Adding user subscription to the database.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "User subscriptions"
-                ],
                 "summary": "Add user subscription",
                 "parameters": [
                     {
-                        "description": "Данные для создания подписки",
+                        "description": "Data for creating a user subscription",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -86,19 +80,25 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Успешное создание подписки",
+                        "description": "Subscription created successfully",
                         "schema": {
                             "$ref": "#/definitions/handler.CreateResponse"
                         }
                     },
                     "400": {
-                        "description": "Некорректный запрос",
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/resp.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "User subscription already exists",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка сервера",
+                        "description": "Server error",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
@@ -108,20 +108,17 @@
         },
         "/subscriptions/total_cost": {
             "get": {
-                "description": "Возвращает суммарную стоимость подписок пользователя за указанный период",
+                "description": "Returns the total cost of a user's subscriptions for the specified period",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Получение общей стоимости подписок",
+                "summary": "Get total user subscription cost",
                 "parameters": [
                     {
-                        "description": "Даты начала и окончания периода",
+                        "description": "Request data",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -138,13 +135,13 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректные даты или тело запроса",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка получения данных",
+                        "description": "Server error",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
@@ -154,15 +151,12 @@
         },
         "/subscriptions/{id}": {
             "get": {
-                "description": "Возвращает информацию о подписке пользователя по её ID",
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Получение подписки пользователя",
+                "description": "Returns information about a user's subscription by its ID",
+                "summary": "Get user subscription",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID подписки",
+                        "description": "Subscription ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -170,25 +164,25 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Request data",
                         "schema": {
                             "$ref": "#/definitions/domain.UserSubscription"
                         }
                     },
                     "400": {
-                        "description": "Неверный ID",
+                        "description": "Invalid ID",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Подписка не найдена",
+                        "description": "User subscription not found",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка получения данных",
+                        "description": "Server error",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
@@ -196,28 +190,25 @@
                 }
             },
             "put": {
-                "description": "Обновляет данные подписки пользователя по её ID",
+                "description": "Updates a user's subscription data by its ID",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Обновление подписки пользователя",
+                "summary": "Update user subscription",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID подписки",
+                        "description": "Subscription ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Данные для обновления подписки",
-                        "name": "body",
+                        "description": "Data for updating the subscription",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -233,13 +224,13 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректный ID или тело запроса",
+                        "description": "Invalid ID or request body",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка при обновлении подписки",
+                        "description": "Error updating subscription",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
@@ -247,15 +238,12 @@
                 }
             },
             "delete": {
-                "description": "Удаляет подписку пользователя по ID",
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Удаление подписки пользователя",
+                "description": "Deletes a user subscription by ID",
+                "summary": "Delete user subscription",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID подписки",
+                        "description": "User subscription ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -269,19 +257,19 @@
                         }
                     },
                     "400": {
-                        "description": "Неверный ID",
+                        "description": "Invalid ID",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Подписка не найдена",
+                        "description": "User ubscription not found",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Ошибка удаления",
+                        "description": "Server error",
                         "schema": {
                             "$ref": "#/definitions/resp.ErrorResponse"
                         }
